contribs container overflow temp bug fix on pixel 3

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -15,7 +15,7 @@
     overflow-y: auto;
     top: 20vh;
     left: 2vw;
-    height: 70vh;
+    height: 65vh;
     width: 96vw;
     background-color: rgb(36, 47, 62);
 
